--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,11 +63,17 @@ jobs:
         with:
           path: artifact_build
 
-  deploy:
+  publish:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: github-pages
     steps:
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Deploy to gh-pages branch
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./artifact_build
+          publish_branch: gh-pages
+          user_name: github-actions[bot]
+          user_email: 41898282+github-actions[bot]@users.noreply.github.com
